Update Homework 4